--- a/team.html
+++ b/team.html
@@ -43,11 +43,17 @@
                     </div>
 
                     <ul class="main-nav nav__tocustom js--main-nav">
-                        <li><a href="/">Hem</a></li>
-                        <li><a href="/#services">Tjänster</a></li>
-                        <li><a href="/#about">Om Oss</a></li>
+                        <!--  <li><a href="/">Hem</a></li>
+<li><a href="/#services">Tjänster</a></li>
+<li><a href="/#about">Om Oss</a></li>
+<li><a href="team.html">Medarbetare</a></li>
+<li><a href="/#contact">Kontakt</a></li>
+-->
+                        <li><a href="index.html">Hem</a></li>
+                        <li><a href="index.html#services">Tjänster</a></li>
+                        <li><a href="index.html#about">Om Oss</a></li>
                         <li><a href="team.html">Medarbetare</a></li>
-                        <li><a href="/#contact">Kontakt</a></li>
+                        <li><a href="index.html#contact">Kontakt</a></li>
                     </ul>
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
 
