Fixed scroll and popup

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ License: https://bootstrapmade.com/license/
     </head>
 
     <body>
-        <header id="header-section">
+        <header class="header-section" id="header">
             <nav>
                 <div class="row">  
                     <div id="logo" class="pull-left">
@@ -44,9 +44,9 @@ License: https://bootstrapmade.com/license/
                     </div>
 
                     <ul class="main-nav js--main-nav">
-                        <li><a href="#header-section">Hem</a></li>
-                        <li><a href="#test">Tjänster</a></li>
-                        <li><a href="#about1">Om Oss</a></li>
+                        <li><a href="#header">Hem</a></li>
+                        <li><a href="#service">Tjänster</a></li>
+                        <li><a href="#about">Om Oss</a></li>
                         <li><a href="team.html">Medarbetare</a></li>
                         <li><a href="#contact">Kontakt</a></li>
                     </ul>
@@ -57,17 +57,17 @@ License: https://bootstrapmade.com/license/
             </nav>
             <div class="hero-text-box">
                 <h1>En personlig redovisningsbyr&aring;. <br>F&ouml;r sm&aring; och stora bolag.</h1>
-                <a class="btn btn-full js--scroll-to-plan" href="#contact">Boka m&ouml;te</a>
+                <a class="btn btn-full js--scroll-to-contact" href="#thecontact">Boka m&ouml;te</a>
                 <a class="btn btn-ghost js--scroll-to-start" href="#services">Visa mig mer</a>
             </div>
         </header>
 
 
 
-        <section class="featured-services js--section-features" id="features"> 
+        <section class="featured-services js--section-services" id="services"> 
             <div class="container">
                 <!-- <div class="row"> -->
-                <div class="items_featured_services">  
+                <div class="items_featured_services js--wp-1">  
                     <div class="featured_service_item box">
                         <i class="ion-ios-bookmarks-outline"></i>
                         <h4 class="title">Redovisningsbyrån med lång erfarenhet </h4>
@@ -93,14 +93,14 @@ License: https://bootstrapmade.com/license/
         <!--==========================
 Services Section
 ============================-->
-        <section class="section-services" id="test">
+        <section class="section-services" id="service">
             <div class="container">
-                <div class="row">
+                <div class="row js--wp-2">
                     <h2>Services</h2>
                     <p class="long-copy">Som redovisningsbyrå kan vi erbjuda en mängd olika tjänster. Vi hjälper er bland annat med bokföring, årsbokslut och deklaration. Här är fler exempel på vad vi som redovisningsbyrå kan hjälpa er med.</p>
                 </div>
                 <!--   <div style="width: 70%; margin: 0 auto;"> -->
-                <span class="items_services">          
+                <span class="items_services js--wp-2">          
                     <div class="service_item">
                         <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
                         <h4 class="title"><a href="">Bokföring</a></h4>
@@ -157,8 +157,8 @@ Services Section
         <!--==========================
 About Us Section
 ============================-->
-        <section id="about">
-            <div class="container" id="about1">
+        <section class="about-section" id="about">
+            <div class="container js--wp-3">
 
                 <div class="row">
                     <h2>Om Oss</h2>
@@ -216,7 +216,7 @@ About Us Section
         <!--==========================
 Facts Section
 ============================-->
-        <section id="facts"  class="wow fadeIn">
+        <section id="facts">
             <div class="container">
 
                 <div class="row">
@@ -255,49 +255,49 @@ Facts Section
             </div>
         </section><!-- #facts -->
 
-        <section class="section-meals">
-            <ul class="meals-showcase clearfix">
+        <section class="section-galerie">
+            <ul class="galerie-showcase clearfix">
                 <li>
-                    <figure class="meal-photo">
-                        <img src="resources/img/office/3.jpg" alt="Korean bibimbap with egg and vegetables">
+                    <figure class="galerie-photo">
+                        <img src="resources/img/office/3.jpg" alt="office3">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
-                        <img src="resources/img/office/1.jpg" alt="Simple italian pizza with cherry tomatoes">
+                    <figure class="galerie-photo">
+                        <img src="resources/img/office/1.jpg" alt="office1">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
-                        <img src="resources/img/office/10.jpg" alt="Chicken breast steak with vegetables">
+                    <figure class="galerie-photo">
+                        <img src="resources/img/office/10.jpg" alt="office10">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
-                        <img src="resources/img/office/4.jpg" alt="Autumn pumpkin soup">
+                    <figure class="galerie-photo">
+                        <img src="resources/img/office/4.jpg" alt="office4">
                     </figure>
                 </li>
 
             </ul>
-            <ul class="meals-showcase clearfix">
+            <ul class="galerie-showcase clearfix">
                 <li>
-                    <figure class="meal-photo">
-                        <img src="resources/img/office/5.jpg" alt="Paleo beef steak with vegetables">
+                    <figure class="galerie-photo">
+                        <img src="resources/img/office/5.jpg" alt="office5">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
-                        <img src="resources/img/office/6.jpg" alt="Healthy baguette with egg and vegetables">
+                    <figure class="galerie-photo">
+                        <img src="resources/img/office/6.jpg" alt="office6">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
-                        <img src="resources/img/office/7.jpg" alt="Burger with cheddar and bacon">
+                    <figure class="galerie-photo">
+                        <img src="resources/img/office/7.jpg" alt="office7">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
-                        <img src="resources/img/office/8.jpg" alt="Granola with cherries and strawberries">
+                    <figure class="galerie-photo">
+                        <img src="resources/img/office/8.jpg" alt="office8">
                     </figure>
                 </li>
 
@@ -307,13 +307,13 @@ Facts Section
         <!--==========================
 Clients Section
 ============================-->
-        <section id="clients" class="wow fadeInUp">
+        <section id="clients">
             <div class="container">
 
-                <div class="section-header">
+                <div class="section-header js--wp-5">
                     <h2>Våra Klienter</h2>
                 </div>
-                <div class="client-objects">
+                <div class="client-objects js--wp-5">
                     <!--   <div style="width: 50%; margin: 0 auto;"> -->
                     <div class="owl-carousel clients-carousel">
                         <div class="item"><img src="resources/img/clients/client-1.png" alt=""></div>
@@ -334,7 +334,7 @@ Clients Section
         <!--==========================
 Testimonials Section
 ============================-->
-        <section id="testimonials" class="section-bg wow fadeInUp">
+        <section id="testimonials" class="js--wp-6">
             <div class="container">
 
                 <div class="section-header">
@@ -406,8 +406,8 @@ Testimonials Section
         <!--==========================
 Contact Section
 ============================-->
-        <section id="contact" class="section-bg wow fadeInUp">
-            <div class="container">
+        <section id="contact" class="section-bg wow fadeInUp js--section-contact">
+            <div class="container" id="thecontact">
 
                 <div class="section-header">
                     <h2>Kontakta Oss</h2>
@@ -538,6 +538,7 @@ Contact Section
 
         <script src="resources/js/script.js"></script>
         <script src="resources/js/counter.js"></script>
+        <script src="resources/js/scroll.js"></script>
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
         <script>
