--- a/team.html
+++ b/team.html
@@ -491,32 +491,43 @@ Team Section
             </div>
         </section><!-- #team -->
 
-
         <footer>
-            <div class="row">
-                <div class="col span-1-of-2">
-                    <ul class="footer-nav">
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Blogs</a></li>
-                        <li><a href="#">Presss</a></li>
-                        <li><a href="#">iOS App</a></li>
-                        <li><a href="#">Android App</a></li>
-                    </ul>
+            <div class="footer-top">
 
-                </div>
-                <div class="col span-1-of-2">
-                    <ul class="social-links">
-                        <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                        <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                        <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-                        <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-                    </ul>
+                <div class="row">
+                    <div class="col span-1-of-2 footer-info">
+                        <h3>Ekonomerna</h3>
 
+                    </div>
+
+                    <div class="col span-1-of-2 footer-contact">
+                        <div class="testa">
+                            <h4>Kontakta Oss</h4>
+                            <p>
+                                Wedavägen 1B <br>
+                                152 42 Södertälje<br>
+
+                                <strong>Telefon:</strong> 08-410 719 19<br>
+                                <strong>Email:</strong> info@example.com<br>
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <div class="col span-1-of-2 slinks">
+                        <ul class="social-links">
+                            <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+                            <li><a href="#"><i class="ion-social-twitter"></i></a></li>
+                            <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
+                            <li><a href="#"><i class="ion-social-instagram"></i></a></li>
+                        </ul>
+
+                    </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="copyright">
                 <p>
-                    Copyright &copy; 2018 by Ekonomerna AB. All rights reserved.
+                    Copyright &copy; 2018 by <strong>Ekonomerna AB</strong>. All rights reserved.
                 </p>
             </div>
 
